Customizando as mensagens do Validation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,12 @@
-NotNull={0} é obrigatoria.
-NotBlank={0} é obrigatoria.
-PositiveOrZero={0} é obrigatoria.
+NotNull={0} Ã© obrigatorio.
+NotBlank={0} Ã© obrigatorio.
+PositiveOrZero={0} deve ser um valor igual ou maior do que zero.
 
 # Cozinha
+cozinha.nome=Nome da cozinha
+cozinha.id=CÃ³digo da cozinha
+
+# Restaurante
+restaurante.nome=Nome do restaurante
+restaurante.taxaFrete=Taxa frete do restaurante
+restaurante.cozinha=Cozinha do restaurante
