--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,3 +10,11 @@ cozinha.id=Código da cozinha
 restaurante.nome=Nome do restaurante
 restaurante.taxaFrete=Taxa frete do restaurante
 restaurante.cozinha=Cozinha do restaurante
+
+# Cidade
+cidade.nome=Nome da cidade
+cidade.estado=Estado da cidade
+
+# Estado
+estado.id=Código do estado
+estado.nome=Nome do estado
