Finalizando implementação de anotação de validação.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ NotNull={0} é obrigatorio.
 NotBlank={0} é obrigatorio.
 PositiveOrZero={0} deve ser um valor igual ou maior do que zero.
 TaxaFrete.invalida={0} é invalido, tente um valor diferente.
+Multiplo={0} não é multiplo do número {1}
 
 # Cozinha
 cozinha.nome=Nome da cozinha
