Corrigindo mensagens de erro do Bean Validation.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,9 +9,9 @@ cozinha.nome=Nome da cozinha
 cozinha.id=Código da cozinha
 
 # Restaurante
-restaurante.nome=Nome do restaurante
-restaurante.taxaFrete=Taxa frete do restaurante
-restaurante.cozinha=Cozinha do restaurante
+restauranteInputDTO.nome=Nome do restaurante
+restauranteInputDTO.taxaFrete=Taxa frete do restaurante
+restauranteInputDTO.cozinha=Cozinha do restaurante
 
 # Cidade
 cidade.nome=Nome da cidade
