Excluindo classes de mixin e alterando o Controller de Cozinha para usar DTOs.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,8 +5,8 @@ TaxaFrete.invalida={0} é invalido, tente um valor diferente.
 Multiplo={0} não é multiplo do número {1}
 
 # Cozinha
-cozinha.nome=Nome da cozinha
-cozinha.id=Código da cozinha
+cozinhaInputDTO.nome=Nome da cozinha
+cozinhaInputDTO.id=Código da cozinha
 
 # Restaurante
 restauranteInputDTO.nome=Nome do restaurante
