Cidade e Estado controller utilizando DTOs.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,9 +14,9 @@ restauranteInputDTO.taxaFrete=Taxa frete do restaurante
 restauranteInputDTO.cozinha=Cozinha do restaurante
 
 # Cidade
-cidade.nome=Nome da cidade
-cidade.estado=Estado da cidade
+cidadeInputDTO.nome=Nome da cidade
+cidadeInputDTO.estado=Estado da cidade
 
 # Estado
-estado.id=Código do estado
-estado.nome=Nome do estado
+estadoInputDTO.id=Código do estado
+estadoInputDTO.nome=Nome do estado
