Finalizando a implementação dos endpoints Forma de Pagamento.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,6 @@ cidadeInputDTO.estado=Estado da cidade
 # Estado
 estadoInputDTO.id=Código do estado
 estadoInputDTO.nome=Nome do estado
+
+# Forma Pagamento
+formaPagamentoInputDTO.descricao=Código da forma de pagamento
