TOrnando o campo endereço obrigatorio para o cadastro e atualização de Restaurantes.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,3 +23,12 @@ estadoInputDTO.nome=Nome do estado
 
 # Forma Pagamento
 formaPagamentoInputDTO.descricao=CÃ³digo da forma de pagamento
+
+# Endereço
+endereco=Endereço
+endereco.cep=CEP
+endereco.logradouro=Logradouro
+endereco.numero=Numero da loja
+endereco.bairro=Bairro
+endereco.cidade.id=Codigo da cidade
+endereco.cidade=Campo cidade
