--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,11 +24,14 @@ estadoInputDTO.nome=Nome do estado
 # Forma Pagamento
 formaPagamentoInputDTO.descricao=CÃ³digo da forma de pagamento
 
-# Endereço
-endereco=Endereço
+# EndereÃ§o
+endereco=EndereÃ§o
 endereco.cep=CEP
 endereco.logradouro=Logradouro
 endereco.numero=Numero da loja
 endereco.bairro=Bairro
 endereco.cidade.id=Codigo da cidade
 endereco.cidade=Campo cidade
+
+# Grupo
+grupoInputDTO.nome=Nome do grupo
