Finalizando a implementação do endpoints de usuários.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,6 +3,7 @@ NotBlank={0} é obrigatorio.
 PositiveOrZero={0} deve ser um valor igual ou maior do que zero.
 TaxaFrete.invalida={0} é invalido, tente um valor diferente.
 Multiplo={0} não é multiplo do número {1}
+Email={0} deve ser valido.
 
 # Cozinha
 cozinhaInputDTO.nome=Nome da cozinha
@@ -35,3 +36,9 @@ endereco.cidade=Campo cidade
 
 # Grupo
 grupoInputDTO.nome=Nome do grupo
+
+#Usuario
+usuarioInputAtDTO.nome=Nome do usuario
+usuarioInputAtDTO.email=Email do usuario
+usuarioSenha.senhaAntiga=Senha antiga do usuario
+usuarioSenha.senhaNova=Senha nova do usuario
