Implementando o endpoint de atualizar Produto.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -42,3 +42,9 @@ usuarioInputAtDTO.nome=Nome do usuario
 usuarioInputAtDTO.email=Email do usuario
 usuarioSenha.senhaAntiga=Senha antiga do usuario
 usuarioSenha.senhaNova=Senha nova do usuario
+
+#Produto
+produtoInputDTO.nome=Nome do produto
+produtoInputDTO.descricao=Descrição do produto
+produtoInputDTO.preco=Preço do produto
+produtoInputDTO.ativo=O campo ativo do produto
