Ajustando as mensagens de erro.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,8 @@ PositiveOrZero={0} deve ser um valor igual ou maior do que zero.
 TaxaFrete.invalida={0} é invalido, tente um valor diferente.
 Multiplo={0} não é multiplo do número {1}
 Email={0} deve ser valido.
+Size={0} deve conter pelo menos um item.
+Positive={0} deve ser um valor igual ou maior do que um.
 
 # Cozinha
 cozinhaInputDTO.nome=Nome da cozinha
@@ -48,3 +50,13 @@ produtoInputDTO.nome=Nome do produto
 produtoInputDTO.descricao=Descrição do produto
 produtoInputDTO.preco=Preço do produto
 produtoInputDTO.ativo=O campo ativo do produto
+
+#Pedido
+pedidoInputDTO.restaurante=Restaurante do pedido
+pedidoInputDTO.restaurante.id=Id do restaurante do pedido
+pedidoInputDTO.formaPagamento=Forma de pagamento do pedido
+pedidoInputDTO.formaPagamento.id=Id da forma de pagamento do pedido
+pedidoInputDTO.enderecoEntrega=Endereço de entrega do pedido
+pedidoInputDTO.itensPedidos=Os itens pedidos
+pedidoInputDTO.itensPedidos.produtoId=O id do produto deste pedido
+pedidoInputDTO.itensPedidos.quantidade=A quantidade solicitada do produto
