Customizando mesnsagens de erro de pesquisa de pedidos.

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ Multiplo={0} não é multiplo do número {1}
 Email={0} deve ser valido.
 Size={0} deve conter pelo menos um item.
 Positive={0} deve ser um valor igual ou maior do que um.
+typeMismatch.java.time.OffsetDateTime={0} deve ser um valor data/hora/offset válido, digite novamente o campo corretamente.
+typeMismatch.java.lang.Long={0} deve ser um valor numérico válido, digite apenas números.
 
 # Cozinha
 cozinhaInputDTO.nome=Nome da cozinha
@@ -60,3 +62,9 @@ pedidoInputDTO.enderecoEntrega=Endereço de entrega do pedido
 pedidoInputDTO.itensPedidos=Os itens pedidos
 pedidoInputDTO.itensPedidos.produtoId=O id do produto deste pedido
 pedidoInputDTO.itensPedidos.quantidade=A quantidade solicitada do produto
+
+#Pedido Filter
+pedidoFilter.dataCriacaoInicio=A data inicial da busca do pedido
+pedidoFilter.dataCriacaoFinal=A data final da busca do pedido
+pedidoFilter.clienteId=O id do cliente
+pedidoFilter.restauranteId=O id do restaurante
